--- a/css/style.css
+++ b/css/style.css
@@ -688,12 +688,15 @@ footer a:hover{
     color: #00000050;
 }
 footer hr{
-    width: 80%;
+    margin-top: 15px;
+    width: 100%;
+    height: 1px;
+    padding: 0.1px;
     background-color: #000000;
 }
 footer p{
     font-size: 14px;
-    margin-top: 60px;
+    margin-top: 50px;
     text-align: center;
     color: #0000005c;
 }
